<resources>
    <string name="app_name">Apogee</string>
    <string name="timerVal">00:00:00</string>
    <string name="pauseButtonLabel">Pause</string>
    <string name="startButtonLabel">Start</string>
    <string name="timerActivityButtonLabel">Timer</string>
    <string name="alarmActivityButtonLabel">Alarm</string>
    <string name="countdownActivityButtonLabel">Count</string>
    <string name="countdownButtonLabel">Start</string>
    <string name="backButtonLabel">Back</string>
    <string name="taskActivityButtonLabel">+</string>
    <string name="taskDisplayActivityButtonLabel">---</string>
    <string name="nutritionActivityButtonLabel">Food</string>
    <string name="taskDisplayTextFake">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id urna magna. Sed ac pellentesque elit. Ut elit massa, ornare at leo id, imperdiet ornare magna. Mauris dapibus elementum lectus in egestas. Cras eleifend porta interdum. Donec ornare magna eu velit aliquam dapibus. Aliquam viverra dolor nulla, at scelerisque turpis varius eget. Nunc porttitor hendrerit venenatis. Integer erat sem, ullamcorper a porttitor a, tempor vitae orci. Mauris euismod lacus sed aliquam aliquam. Curabitur feugiat posuere dapibus. Aenean vehicula massa ligula, sed dictum elit egestas eget. Etiam placerat nulla vel neque pretium, eget bibendum ipsum interdum.\n
Sed vel imperdiet ipsum. Sed velit sapien, venenatis nec sem sit amet, viverra commodo est. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce maximus aliquam mattis. Fusce pretium turpis sed vestibulum porta. Praesent ipsum lacus, feugiat quis pretium quis, dignissim eu orci. Vivamus velit nibh, tincidunt et massa ac, placerat dignissim ipsum. Duis sed risus feugiat mi blandit congue. Phasellus ullamcorper, orci finibus posuere dignissim, urna mauris elementum sapien, id dignissim dui metus eget lacus. Nullam ac urna sit amet felis dignissim consectetur quis porttitor ex. Vivamus ornare nibh non justo cursus porta. Nulla finibus enim in pretium ultricies. Aenean blandit mi id sem hendrerit posuere. Donec sed luctus enim. Phasellus vitae ipsum libero.\n
Maecenas fermentum, tellus id tempus tincidunt, lectus enim vulputate nunc, eu rutrum ante massa ut libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras vel est neque. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In hac habitasse platea dictumst. Ut a mauris et diam tristique vehicula. Integer non dui metus. Integer non nunc quis lorem sagittis interdum ac ut nibh. Proin sit amet risus sed diam laoreet mollis non at ante. Praesent at augue imperdiet, gravida nunc ornare, dictum lacus. Donec fermentum, velit et tincidunt venenatis, risus risus blandit est, id sodales lacus eros in mauris.\n
Fusce eget viverra nisi. Praesent blandit, tellus vitae pharetra porta, velit eros malesuada turpis, ac faucibus orci tellus vitae lectus. Nulla velit massa, laoreet ac venenatis in, pellentesque sit amet elit. Pellentesque porttitor pellentesque nunc ut varius. Ut maximus neque quis feugiat pharetra. Ut risus dolor, porta a purus et, elementum bibendum tortor. Mauris facilisis id quam nec ultricies. Donec sit amet posuere orci. Sed sed libero sollicitudin, bibendum turpis sit amet, condimentum velit. Donec id ligula interdum, feugiat massa vitae, suscipit dui. Suspendisse vehicula turpis eget nisi aliquet imperdiet. Phasellus lobortis tellus purus, id vestibulum mi lacinia ut. Praesent gravida at nibh id mattis. Aliquam et dictum eros. Nullam euismod magna ut mi scelerisque rhoncus.\n
Sed blandit nunc sit amet malesuada rutrum. Vestibulum non nisi scelerisque, ullamcorper felis sed, bibendum libero. Curabitur ac congue diam, eget mollis sapien. Duis eu lacus maximus, cursus justo ac, iaculis ante. Nulla aliquam, tortor at imperdiet consectetur, leo ligula tincidunt odio, tempor ultricies ex diam vitae sem. Donec nunc metus, consequat ut metus eget, porttitor interdum libero. Curabitur maximus laoreet luctus. Vestibulum aliquet neque ut justo vestibulum faucibus. Donec ut tempor augue, a sodales eros. Curabitur facilisis ultrices venenatis. Quisque hendrerit volutpat elit ut euismod.</string>
</resources>
